--- a/styles.css
+++ b/styles.css
@@ -9,25 +9,29 @@
   border-radius: 50%; 
   text-align: center; 
   line-height: 50px; 
-  background-color: darkgreen;
-  color: white;
   border: none;
+  background-image: url('/img/button.png');
+  background-size: cover; 
+  background-position: center; 
+  background-color: transparent;
 }
 
 #previousObject {
-  position: absolute;
+   position: absolute;
   top: 50%; 
-  left: 10px; 
-  transform: translateY(-50%);
+  left: 10px;
+  transform: translateY(-50%) rotate(180deg);
   z-index: 1000;
   width: 50px; 
   height: 50px; 
   border-radius: 50%; 
   text-align: center; 
   line-height: 50px; 
-  background-color: darkgreen;
-  color: white;
   border: none;
+  background-image: url('/img/button.png');
+  background-size: cover; 
+  background-position: center; 
+  background-color: transparent;
 }
 
 #bottomBox {
@@ -36,10 +40,32 @@
   left: 50%;
   transform: translateX(-50%);
   width: 90%;
-  background-color: rgba(0, 0, 0, 0.8); 
+  background-color: #000000ad; 
   color: white; 
   padding: 20px; 
   box-sizing: border-box; 
   text-align: center; 
   border-radius: 30px;
+  border: 2px solid #f9a01cdb;
+}
+
+#logo{
+  position: fixed;
+  top: -45px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  width: 250px;
+  height: 250px; 
+}
+
+#background_color {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #03120B60; /* Adjust the color and opacity as needed */
+  z-index: 0; /* Ensure it stays behind other elements */
+  pointer-events: none; /* Make it non-interactable */
 }
