--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   text-align: center; 
   line-height: 50px; 
   border: none;
-  background-image: url('/img/button.png');
+  background-image: url('public/img/button.png');
   background-size: cover; 
   background-position: center; 
   background-color: transparent;
@@ -28,7 +28,7 @@
   text-align: center; 
   line-height: 50px; 
   border: none;
-  background-image: url('/img/button.png');
+  background-image: url('public/img/button.png');
   background-size: cover; 
   background-position: center; 
   background-color: transparent;
