--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+.hidden {
+  display: none;
+}
 #nextObject {
   position: absolute;
   top: 50%; 
@@ -45,7 +48,7 @@
   padding: 20px; 
   box-sizing: border-box; 
   text-align: center; 
-  border-radius: 30px;
+  border-radius: 15px;
   border: 2px solid #f9a01cdb;
 }
 
@@ -65,7 +68,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #03120B60; /* Adjust the color and opacity as needed */
-  z-index: 0; /* Ensure it stays behind other elements */
-  pointer-events: none; /* Make it non-interactable */
+  background-color: #03120B60;
+  z-index: 0; 
+  pointer-events: none; 
 }
