--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   text-align: center; 
   line-height: 50px; 
   border: none;
-  background-image: url('public/img/button.png');
+  background-image: url('public/img/button_wg.png');
   background-size: cover; 
   background-position: center; 
   background-color: transparent;
@@ -31,7 +31,7 @@
   text-align: center; 
   line-height: 50px; 
   border: none;
-  background-image: url('public/img/button.png');
+  background-image: url('public/img/button_wg.png');
   background-size: cover; 
   background-position: center; 
   background-color: transparent;
