--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
 .hidden {
   display: none;
 }
+
+@font-face {
+  font-family: 'Barlow';
+  src: url('public/fonts/Barlow.ttf') format('truetype');
+}
+
+body {
+  font-family: 'Barlow', sans-serif;
+}
+
 #nextObject {
   position: absolute;
   top: 50%; 
@@ -50,6 +60,11 @@
   text-align: center; 
   border-radius: 15px;
   border: 2px solid #f9a01cdb;
+}
+
+#bottomBox h2,
+#bottomBox p {
+  font-family: 'Barlow', sans-serif;
 }
 
 #logo{
