--- a/styles.css
+++ b/styles.css
@@ -1,89 +1,44 @@
-.hidden {
-  display: none;
+body, html {
+  margin: 0; 
+  padding: 0; 
+  height: 100%; 
+  overflow: hidden;
 }
 
-@font-face {
-  font-family: 'Barlow';
-  src: url('public/fonts/Barlow.ttf') format('truetype');
-}
-
-body {
-  font-family: 'Barlow', sans-serif;
-}
-
-#nextObject {
-  position: absolute;
-  top: 50%; 
-  right: 10px;
-  transform: translateY(-50%);
-  z-index: 1000;
-  width: 50px; 
-  height: 50px; 
-  border-radius: 50%; 
-  text-align: center; 
-  line-height: 50px; 
-  border: none;
-  background-image: url('public/img/button_wg.png');
-  background-size: cover; 
-  background-position: center; 
-  background-color: transparent;
-}
-
-#previousObject {
-   position: absolute;
-  top: 50%; 
-  left: 10px;
-  transform: translateY(-50%) rotate(180deg);
-  z-index: 1000;
-  width: 50px; 
-  height: 50px; 
-  border-radius: 50%; 
-  text-align: center; 
-  line-height: 50px; 
-  border: none;
-  background-image: url('public/img/button_wg.png');
-  background-size: cover; 
-  background-position: center; 
-  background-color: transparent;
-}
-
-#bottomBox {
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 90%;
-  background-color: #000000ad; 
-  color: white; 
-  padding: 20px; 
-  box-sizing: border-box; 
-  text-align: center; 
-  border-radius: 15px;
-  border: 2px solid #f9a01cdb;
-}
-
-#bottomBox h2,
-#bottomBox p {
-  font-family: 'Barlow', sans-serif;
-}
-
-#logo{
-  position: fixed;
-  top: -45px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1000;
-  width: 250px;
-  height: 250px; 
-}
-
-#background_color {
-  position: fixed;
+#video {
+  position: fixed; 
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #09341f96;
-  z-index: 0; 
-  pointer-events: none; 
+  object-fit: cover; 
+  z-index: -1; 
+}
+
+#snap {
+  position: absolute; 
+  top: 20px; 
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1; 
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+#capturedImage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%; 
+  max-height: 90%;
+  z-index: 1; 
+  display: none;
+}
+
+#canvas {
+  display: none;
 }
