--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,39 @@ body, html {
 #canvas {
   display: none;
 }
+
+#nextObject {
+  position: absolute;
+  top: 50%; 
+  right: 10px;
+  transform: translateY(-50%);
+  z-index: 1000;
+  width: 50px; 
+  height: 50px; 
+  border-radius: 50%; 
+  text-align: center; 
+  line-height: 50px; 
+  border: none;
+  background-image: url('public/img/button_wg.png');
+  background-size: cover; 
+  background-position: center; 
+  background-color: transparent;
+}
+
+#previousObject {
+   position: absolute;
+  top: 50%; 
+  left: 10px;
+  transform: translateY(-50%) rotate(180deg);
+  z-index: 1000;
+  width: 50px; 
+  height: 50px; 
+  border-radius: 50%; 
+  text-align: center; 
+  line-height: 50px; 
+  border: none;
+  background-image: url('public/img/button_wg.png');
+  background-size: cover; 
+  background-position: center; 
+  background-color: transparent;
+}
